test/classes/delete-free/tests-from-design-overview/generic-collection-borrowed-int-error.good
generic-collection-borrowed-int-error.chpl:11: In function 'test':
generic-collection-borrowed-int-error.chpl:14: error: unresolved type specifier 'Collection(type int(64))'
generic-collection-borrowed-int-error.chpl:3: note: this candidate did not match: Collection(type element)
generic-collection-borrowed-int-error.chpl:14: note: because call actual argument #1 with type int(64)
generic-collection-borrowed-int-error.chpl:4: note: is passed to formal 'element: _borrowed'
